repaired Dependency issues

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@openzeppelin/contracts": "^5.0.1",
+    "@openzeppelin/contracts-upgradeable": "^5.0.1",
     "@sky-mavis/tanto-connect": "^0.0.11",
     "ethers": "^6.13.5",
     "framer-motion": "^11.0.3",
@@ -33,7 +35,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
-    "@openzeppelin/contracts": "^4.9.6",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "@tailwindcss/postcss": "^4",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
